// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Google renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-google google-picker"
    style="width: 652px;"
  >
    <div
      class="rc-google__head"
    >
      Color picker
    </div>
    <div
      class="rc-google__swatch"
      style="background: rgb(34, 25, 77);"
    />
    <div
      class="rc-google__saturation"
    >
      <div
        aria-label="Color saturation and brightness"
        class="rc-saturation"
        style="background: rgb(43, 0, 255);"
        tabindex="0"
      >
        <div
          class="rc-saturation__white"
          style="background: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0));"
        >
          <div
            class="rc-saturation__black"
            style="background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));"
          />
          <div
            class="rc-saturation__pointer"
            style="top: 70%; left: 66.66666666666667%;"
          >
            <div
              class="rc-google__pointer-circle"
              style="background: rgb(34, 26, 77);"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-google__body"
    >
      <div
        class="rc-google__controls"
      >
        <div
          class="rc-google__hue"
        >
          <div
            class="rc-hue-control"
            style="border-radius: 4px;"
          >
            <div
              aria-orientation="horizontal"
              aria-valuemax="359"
              aria-valuemin="0"
              aria-valuenow="250"
              class="rc-hue-control__container"
              role="slider"
              style="border-radius: 4px; background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
              tabindex="0"
            >
              <div
                class="rc-hue-control__pointer"
                style="left: 69.44444444444443%;"
              >
                <div
                  class="rc-google__pointer"
                  style="background: rgb(43, 0, 255);"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rc-google__fields"
      >
        <div
          class="rc-google__fields-body"
        >
          <div
            class="rc-google__field-row rc-google__field-row--primary"
          >
            <div
              class="rc-editable-input"
            >
              <input
                class="rc-editable-input__input"
                id="rc-editable-input-1"
                spellcheck="false"
                value="#22194D"
              />
              <label
                class="rc-editable-input__label"
                for="rc-editable-input-1"
              >
                hex
              </label>
            </div>
          </div>
          <div
            class="rc-google__field-row rc-google__field-row--secondary"
          >
            <div
              class="rc-google__field"
            >
              <div
                class="rc-editable-input"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-2"
                  spellcheck="false"
                  value="34, 25, 77"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-2"
                >
                  rgb
                </label>
              </div>
            </div>
            <div
              class="rc-google__field"
            >
              <div
                class="rc-editable-input"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-3"
                  spellcheck="false"
                  value="250°, 67%, 30%"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-3"
                >
                  hsv
                </label>
              </div>
            </div>
            <div
              class="rc-google__field"
            >
              <div
                class="rc-editable-input"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-4"
                  spellcheck="false"
                  value="250°, 50%, 20%"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-4"
                >
                  hsl
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GoogleFields renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-google__fields"
  >
    <div
      class="rc-google__fields-body"
    >
      <div
        class="rc-google__field-row rc-google__field-row--primary"
      >
        <div
          class="rc-editable-input"
        >
          <input
            class="rc-editable-input__input"
            id="rc-editable-input-9"
            spellcheck="false"
            value="#FF0000"
          />
          <label
            class="rc-editable-input__label"
            for="rc-editable-input-9"
          >
            hex
          </label>
        </div>
      </div>
      <div
        class="rc-google__field-row rc-google__field-row--secondary"
      >
        <div
          class="rc-google__field"
        >
          <div
            class="rc-editable-input"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-10"
              spellcheck="false"
              value="255, 0, 0"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-10"
            >
              rgb
            </label>
          </div>
        </div>
        <div
          class="rc-google__field"
        >
          <div
            class="rc-editable-input"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-11"
              spellcheck="false"
              value="0°, 100%, 100%"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-11"
            >
              hsv
            </label>
          </div>
        </div>
        <div
          class="rc-google__field"
        >
          <div
            class="rc-editable-input"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-12"
              spellcheck="false"
              value="0°, 100%, 50%"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-12"
            >
              hsl
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GooglePointer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-google__pointer"
    style="background: rgb(43, 0, 255);"
  />
</DocumentFragment>
`;

exports[`GooglePointerCircle renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-google__pointer-circle"
    style="background: rgb(34, 26, 77);"
  />
</DocumentFragment>
`;
